Fixed signature image too small on mobile.

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -767,11 +767,15 @@ article {
     }
   }
 }
+
+/*
+   Image on index page
+   ========================================================================== */
 .centered{
   align-items: center;
   text-align: center;
 }
 .centered-image{
-  width: 50vw;
+  width: max(50vw, 50vh);
   max-width: 100%;
 }
